[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thread-warden"
version = "0.1.0"
description = "A robust thread supervisor for Python applications that monitors, restarts, and manages state for threads."
readme = "README.md"
authors = [
  { name = "Seth Michel" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
# Replace with actual URL if different
"Homepage" = "https://github.com/SethMichel/thread-warden"
"Bug Tracker" = "https://github.com/SethMichel/thread-warden/issues"

[tool.setuptools.packages.find]
where = ["src"]

